<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_color"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="@dimen/_100sdp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
            android:id="@+id/selectLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <com.how_about_now.app.custom_views.SfRegulerTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/please_select_gender"
                android:textColor="@color/black_color"
                android:textSize="@dimen/_12sdp" />

        <com.how_about_now.app.custom_views.SfRegulerTextView
                android:id="@+id/maleTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/male"
                android:textColor="@color/black_color"
                android:textSize="@dimen/_12sdp" />

        <com.how_about_now.app.custom_views.SfRegulerTextView
                android:id="@+id/femaleTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/female"
                android:textColor="@color/black_color"
                android:textSize="@dimen/_12sdp" />
    </LinearLayout>

</LinearLayout>