<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingRight="@dimen/_20sdp">

    <com.how_about_now.app.custom_views.SfBoldTextView
            android:id="@+id/textViewProximanovaBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_80sdp"
            android:gravity="center"
            android:text="@string/forgotPass"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp" />

    <com.how_about_now.app.custom_views.SfRegulerTextView
            android:id="@+id/textViewProximanovaRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/forgotPassDetail"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintTop_toBottomOf="@+id/textViewProximanovaBold"
            tools:layout_editor_absoluteX="-16dp" />


    <com.how_about_now.app.custom_views.SfRegulerEditText
            android:id="@+id/editTextProximanovaRegular"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@android:color/transparent"
            android:hint="@string/email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewProximanovaRegular" />

    <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextProximanovaRegular" />

    <com.how_about_now.app.custom_views.SfRegulerButton
            android:id="@+id/sendPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:text="@string/sendPassword"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintTop_toBottomOf="@+id/view"
            tools:layout_editor_absoluteX="0dp" />

    <com.how_about_now.app.custom_views.SfRegulerTextView
            android:id="@+id/closeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/close"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sendPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>
