<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_color"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="@dimen/_100sdp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
            android:id="@+id/selectLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <com.how_about_now.app.custom_views.SfRegulerTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@string/please_select"
                android:textColor="@color/black_color"
                android:textSize="@dimen/_12sdp" />

        <com.how_about_now.app.custom_views.SfRegulerTextView
                android:id="@+id/cameraTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_camera_dialog"
                android:drawablePadding="@dimen/_20sdp"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp"
                android:text="@string/take_photo"
                android:textAlignment="viewStart"
                android:textColor="@color/black_color"
                android:textDirection="rtl"
                android:textSize="@dimen/_12sdp"
                tools:ignore="RtlCompat" />

        <com.how_about_now.app.custom_views.SfRegulerTextView
                android:id="@+id/galleryTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_gallery"
                android:drawablePadding="@dimen/_20sdp"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp"
                android:text="@string/choose_photo_from_gallery"
                android:textAlignment="viewStart"
                android:textColor="@color/black_color"
                android:textDirection="rtl"
                android:textSize="@dimen/_12sdp"
                tools:ignore="RtlCompat" />
    </LinearLayout>

</LinearLayout>